# compiz-plugins-main

./: .gitignore  2016nov01compn63.patch  AUTHORS  CMakeLists.txt  Makefile.am  NEWS  README.md  VERSION  autogen.sh  bcop.cmake  compiz-animation.pc.in  compiz-focuspoll.pc.in  compiz-mousepoll.pc.in  compiz-text.pc.in  configure.ac  metadata.cmake  nohup.out  plugin.cmake  swap-hue  winrules.schemawinrules.schema
cmake/: CompizFusion.cmake  addons.cmake
data/: CMakeLists.txt  Makefile.am
data/colorfilter/: AUTHORS  compiz-core-print-fragment-program.patch
data/ezoom/: API  dsend.sh
data/filters/: CMakeLists.txt  Makefile.am  blackandwhite  colornegative  contrast  grayscale  negative  negative-green  negative-lightness  nightmode  nightmode.readme.txt  nightmodec  photosensitivity-1  photosensitivity-1-negative  swap-hue
icons/: Makefile.am
images/: CMakeLists.txt  Makefile.am
images/Default/: Makefile.am
images/Gnome/: CMakeLists.txt  Makefile.am
images/Oxygen/: CMakeLists.txt  Makefile.am
include/: CMakeLists.txt  Makefile  Makefile.am  animation.h  compiz-animation.h  compiz-focuspoll.h  compiz-mousepoll.h  compiz-text.h
metadata/: CMakeLists.txt  Makefile.am  animation.xml  animation.xml.in  bs.xml.in  colorfilter.xml.in  expo.xml  expo.xml.in  ezoom.xml  ezoom.xml.in  focuspoll.xml.in  imgjpeg.xml  imgjpeg.xml.in  kdecompat.xml.in  mag.xml.in  mousepoll.xml.in  neg.xml  neg.xml.in  opacify.xml  opacify.xml.in  put.xml  put.xml.in  resizeinfo.xml  resizeinfo.xml.in  ring.xml  ring.xml.in  scaleaddon.xml  scaleaddon.xml.in  session.xml.in  shift.xml.in  snap.xml  snap.xml.in  staticswitcher.xml.in  text.xml  text.xml.in  thumbnail.xml  thumbnail.xml.in  titleinfo.xml.in  vpswitch.xml  vpswitch.xml.in  (+5 more)
po/: ChangeLog  LINGUAS  Makevars  POTFILES.in  ar.po  as.po  be.po  bn.po  ca.po  compiz-fusion-plugins.pot  compiz-plugins-main.pot  cs.po  da.po  de.po  el.po  en_GB.po  es.po  eu.po  fa.po  fi.po  fr.po  gl.po  gu.po  he.po  hi.po  hr.po  hu.po  it.po  ja.po  ko.po  ml_IN.po  nb.po  nl.po  or.po  pl.po  pl_PL.po  pt.po  pt_BR.po  pt_PT.po  ru.po  (+5 more)
src/: CMakeLists.txt  Makefile.am
src/animation/: CMakeLists.txt  Makefile.am  airplane3d.c  animation-internal.h  animation.c  animation_tex.h  beamup.c  beamup.h  burn.c  burn.h  curvedfold.c  curvedfold.h  dodge.c  dodge.h  domino.c  domino.h  dream.c  dream.h  explode3d.c  explode3d.h  fade.c  fade.h  focusfade.c  focusfade.h  fold3d.c  glide.c  glide.h  horizontalfold.c  horizontalfold.h  leafspread.c  leafspread.h  magiclamp.c  magiclamp.h  options.c  particle.c  polygon.c  rollup.c  rollup.h  skewer.c  wave.c  (+3 more)
src/bs/: CMakeLists.txt  Makefile.am  bs.c
src/colorfilter/: CMakeLists.txt  Makefile.am  colorfilter.c  parser.c  parser.h
src/expo/: CMakeLists.txt  Makefile.am  expo.c
src/ezoom/: CMakeLists.txt  Makefile.am  ezoom.c
src/focuspoll/: Makefile.am  accessibilitywatcher.cpp  accessibilitywatcher.h  focusinfo.cpp  focusinfo.h  focuspoll.cpp
src/jpeg/: CMakeLists.txt  Makefile.am  imgjpeg.c
src/kdecompat/: CMakeLists.txt  Makefile.am  kdecompat.c
src/mag/: CMakeLists.txt  Makefile.am  mag.c
src/mousepoll/: CMakeLists.txt  Makefile.am  mousepoll.c
src/neg/: CMakeLists.txt  Makefile.am  neg.c
src/opacify/: CMakeLists.txt  Makefile.am  opacify.c
src/put/: CMakeLists.txt  Makefile.am  put.c
src/resizeinfo/: CMakeLists.txt  Makefile.am  resizeinfo.c
src/ring/: CMakeLists.txt  Makefile.am  ring.c
src/scaleaddon/: CMakeLists.txt  Makefile.am  scaleaddon.c
src/session/: CMakeLists.txt  Makefile.am  session.c
src/shift/: CMakeLists.txt  Makefile.am  shift.c
src/snap/: CMakeLists.txt  Makefile.am  snap.c
src/staticswitcher/: CMakeLists.txt  Makefile.am  staticswitcher.c
src/text/: CMakeLists.txt  Makefile.am  text.c  text.h
src/thumbnail/: CMakeLists.txt  Makefile.am  thumbnail.c
src/titleinfo/: CMakeLists.txt  Makefile.am  titleinfo.c
src/vpswitch/: CMakeLists.txt  Makefile.am  vpswitch.c
src/wall/: CMakeLists.txt  Makefile.am  wall.c
src/winrules/: CMakeLists.txt  Makefile.am  winrules.c
src/workarounds/: CMakeLists.txt  Makefile.am  workarounds.c
