add_subdirectory (animation)
add_subdirectory (bs)
add_subdirectory (colorfilter)
add_subdirectory (expo)
add_subdirectory (ezoom)
add_subdirectory (jpeg)
add_subdirectory (mag)
add_subdirectory (mousepoll)
add_subdirectory (neg)
add_subdirectory (opacify)
add_subdirectory (put)
add_subdirectory (resizeinfo)
add_subdirectory (ring)
if (SCALE_FOUND)
    add_subdirectory (scaleaddon)
endif (SCALE_FOUND)
add_subdirectory (session)
add_subdirectory (shift)
add_subdirectory (snap)
add_subdirectory (text)
add_subdirectory (thumbnail)
add_subdirectory (vpswitch)
add_subdirectory (wall)
add_subdirectory (winrules)
add_subdirectory (workarounds)
