## Process this file with automake to produce Makefile.in
SUBDIRS = \
    animation    \
    colorfilter  \
    expo         \
    ezoom        \
    jpeg         \
    neg          \
    opacify      \
    put          \
    resizeinfo   \
    ring         \
    scaleaddon   \
    snap         \
    text         \
    thumbnail    \
    wall         \
    winrules     \
    workarounds  \
    vpswitch     \
    shift        \
    mousepoll    \
    mag
