## Process this file with automake to produce Makefile.in
SUBDIRS = \
    animation      \
    bs             \
    colorfilter    \
    expo           \
    ezoom          \
    jpeg           \
    mag            \
    mousepoll      \
    neg            \
    opacify        \
    put            \
    resizeinfo     \
    ring           \
    scaleaddon     \
    session        \
    shift          \
    snap           \
    staticswitcher \
    text           \
    thumbnail      \
    vpswitch       \
    wall           \
    winrules       \
    workarounds
