## Process this file with automake to produce Makefile.in
SUBDIRS = \
    animation      \
    colorfilter    \
    expo           \
    ezoom          \
    jpeg           \
    mag            \
    mousepoll      \
    neg            \
    opacify        \
    put            \
    resizeinfo     \
    ring           \
    scaleaddon     \
    session        \
    shift          \
    snap           \
    staticswitcher \
    text           \
    thumbnail      \
    titleinfo      \
    vpswitch       \
    winrules       \
    workarounds
