install (
    FILES blackandwhite
          blueish-filter
          contrast
          deuteranopia
          grayscale
          negative
          negative-green
          protanopia
          sepia
          swap-green-blue
          swap-red-blue
          swap-red-green
    DESTINATION share/compiz/filters
)
