filtersdir = $(compdatadir)/filters
filters_DATA = 		\
       blackandwhite   \
       blueish-filter  \
       colornegative   \
       contrast        \
       deuteranopia    \
       grayscale       \
       negative        \
       negative-green  \
       nightmode       \
       nightmodeb      \
       nightmodec      \
       nightmoded      \
       protanopia      \
       sepia           \
       swap-green-blue \
       swap-red-blue   \
       swap-red-green

EXTRA_DIST = $(filters_DATA)
